// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManageRestrictedJoinRuleDialog /> should list spaces which are not parents of the room 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ManageRestrictedJoinRuleDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Select spaces
      </h1>
    </div>
    <p>
      <span>
        Decide which spaces can access this room. If a space is selected, its members can find and join 
        <strong>
          !roomId:server
        </strong>
        .
      </span>
    </p>
    <div
      class="mx_SearchBox mx_textinput"
    >
      <input
        autocomplete="off"
        class="mx_textinput_icon mx_textinput_search mx_textinput_icon mx_textinput_search"
        data-testid="searchbox-input"
        placeholder="Search spaces"
        type="text"
        value=""
      />
      <div
        class="mx_AccessibleButton mx_SearchBox_closeButton"
        role="button"
        tabindex="-1"
      />
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ManageRestrictedJoinRuleDialog_content"
      tabindex="-1"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section"
      >
        <h3>
          Other spaces you know
        </h3>
        <div
          class="mx_ManageRestrictedJoinRuleDialog_entry"
        >
          <form
            class="_root_19upo_16"
          >
            <div
              class="_inline-field_19upo_32"
            >
              <div
                class="_inline-field-control_19upo_44"
              >
                <div
                  class="_container_1hel1_10"
                >
                  <input
                    aria-describedby=":r5:"
                    class="_input_1hel1_18"
                    id="checkbox_vY7Q4uEh9K"
                    type="checkbox"
                  />
                  <div
                    class="_ui_1hel1_19"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="_inline-field-body_19upo_38"
              >
                <label
                  class="_label_19upo_59"
                  for="checkbox_vY7Q4uEh9K"
                >
                  <div>
                    <span
                      class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
                      data-color="1"
                      data-testid="avatar-img"
                      data-type="round"
                      role="none"
                      style="--cpd-avatar-size: 20px;"
                    >
                      O
                    </span>
                    <span
                      class="mx_ManageRestrictedJoinRuleDialog_entry_name"
                    >
                      Other Space
                    </span>
                  </div>
                </label>
                <span
                  class="_message_19upo_85 _help-message_19upo_91"
                  id=":r5:"
                >
                  0 members
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="mx_ManageRestrictedJoinRuleDialog_footer"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section_info"
      >
        You're removing all spaces. Access will default to invite only
      </div>
      <div
        class="mx_ManageRestrictedJoinRuleDialog_footer_buttons"
      >
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
          role="button"
          tabindex="0"
        >
          Confirm
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<ManageRestrictedJoinRuleDialog /> should render empty state 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ManageRestrictedJoinRuleDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Select spaces
      </h1>
    </div>
    <p>
      <span>
        Decide which spaces can access this room. If a space is selected, its members can find and join 
        <strong>
          !roomId:server
        </strong>
        .
      </span>
    </p>
    <div
      class="mx_SearchBox mx_textinput"
    >
      <input
        autocomplete="off"
        class="mx_textinput_icon mx_textinput_search mx_textinput_icon mx_textinput_search"
        data-testid="searchbox-input"
        placeholder="Search spaces"
        type="text"
        value=""
      />
      <div
        class="mx_AccessibleButton mx_SearchBox_closeButton"
        role="button"
        tabindex="-1"
      />
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ManageRestrictedJoinRuleDialog_content"
      tabindex="-1"
    >
      <span
        class="mx_ManageRestrictedJoinRuleDialog_noResults"
      >
        No results
      </span>
    </div>
    <div
      class="mx_ManageRestrictedJoinRuleDialog_footer"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section_info"
      >
        You're removing all spaces. Access will default to invite only
      </div>
      <div
        class="mx_ManageRestrictedJoinRuleDialog_footer_buttons"
      >
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
          role="button"
          tabindex="0"
        >
          Confirm
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
